@@ -2,4 +2,5 @@ v0.9.0:
  + Rewritten in C.
  + Rewritten interface in GTK.
  + Added proxy-free multiplayer.
+ + Added "Featured servers".
 
